--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -20,5 +20,5 @@ COPY nginx/nginx.conf /etc/nginx/conf.d
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
-# docker build -f Dockerfile-prod -t swoy-vue-web-client:prod .
+# docker build -f Dockerfile.prod -t swoy-vue-web-client:prod .
 # docker run -it -p 80:80 --rm swoy-vue-web-client:prod
