--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,7 +8,7 @@ COPY . ./
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
 RUN yarn install --silent
-RUN yarn global add @vue/cli@3.7.0
+RUN yarn global add @vue/cli
 RUN yarn build
 
 # production environment
