--- a/package.json
+++ b/package.json
@@ -20,38 +20,40 @@
     "dayjs": "^1.8.27",
     "element-ui": "^2.13.1",
     "jest": "^26.0.1",
+    "jwt-decode": "^2.2.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
+    "ramda": "^0.26.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.4.0",
-    "vuex-persist": "^2.2.0",
-    "ramda": "^0.26.1",
+    "vue-content-placeholders": "^0.2.1",
     "vue-infinite-loading": "^2.4.4",
-    "vue-virtual-scroll-list": "^1.4.6"
+    "vue-router": "^3.1.6",
+    "vue-virtual-scroll-list": "^1.4.6",
+    "vuex": "^3.4.0",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "lint-staged": "^10.2.2",
-    "vue-template-compiler": "^2.6.11",
-    "yorkie": "^2.0.0",
     "@vue/cli-plugin-pwa": "~4.3.0",
     "@vue/cli-plugin-router": "~4.3.0",
     "@vue/cli-plugin-unit-jest": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.0-beta.31",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^10.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "yorkie": "^2.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
