--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "swoy-vue-web-client",
   "version": "0.1.0",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/blacknred/swoy-vue-web-client"
-  },
-  "main": "src/main.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "test": "jest"
   },
+  "main": "src/main.js",
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
     "core-js": "^3.6.4",
@@ -28,6 +25,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-content-placeholders": "^0.2.1",
+    "vue-i18n": "^8.17.3",
     "vue-infinite-loading": "^2.4.4",
     "vue-router": "^3.1.6",
     "vue-virtual-scroll-list": "^1.4.6",
@@ -35,6 +33,7 @@
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-pwa": "~4.3.0",
@@ -52,17 +51,22 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-template-compiler": "^2.6.11",
     "yorkie": "^2.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
+  "license": "MIT",
   "lint-staged": {
     "*.{js,jsx,vue}": [
       "vue-cli-service lint --no-fix",
       "git add"
     ]
   },
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/blacknred/swoy-vue-web-client"
+  }
 }
