--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "main": "src/main.js",
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
+    "@vue/composition-api": "^0.5.0",
     "core-js": "^3.6.4",
     "dayjs": "^1.8.27",
     "element-ui": "^2.13.1",
