--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
-    "ramda": "^0.26.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-content-placeholders": "^0.2.1",
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.1.6",
+    "vue-the-mask": "^0.11.1",
     "vue-virtual-scroll-list": "^1.4.6",
     "vuex": "^3.4.0",
     "vuex-persist": "^2.2.0"
